create header footer main

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -18,7 +18,11 @@
 .container {
    max-width: $containerWidth;
    margin: 0 auto;
-   padding: 0 10px;
+   padding: 0 20px;
+   @media (max-width: $sTablet) {
+      max-width: 752px;
+      padding: 0 20px;
+   }
 }
 
 h2 {
@@ -26,17 +30,28 @@ h2 {
    font-weight: 700;
    line-height: toRem(44);
    color: $blackColor;
+   @media (max-width: $tablet) {
+      font-size: 28px;
+      line-height: toRem(36);
+   }
 }
 
 h3 {
    font-size: $thirdTitleSize;
    font-weight: 700;
-   line-height: toRem(32);
+   line-height: toRem(36);
    color: $blackColor;
 }
 
 h4 {
    font-size: $fourthTitleSize;
+   font-weight: 700;
+   line-height: toRem(24);
+   color: $blackColor;
+}
+
+h5 {
+   font-size: $fifthTitleSize;
    font-weight: 700;
    line-height: toRem(24);
    color: $blackColor;
