--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
 @import './base/normalize';
 @import './base/fonts';
-@import './layouts/mobileMenu';
+@import './layouts/headerMobile';
 @import './layouts/header';
 @import './layouts/footer';
 @import './layouts/modal';
