--- a/src/styles/layouts/_headerMobile.scss
+++ b/src/styles/layouts/_headerMobile.scss
@@ -1,242 +1,104 @@
 @import '../base/vars';
 
-.header {
+.header-mobile {
+   display: none;
+}
+
+@media (max-width: $tablet) {
+   
+.header-mobile {
+   display: block;
    position: relative;
    top: 0;
    left: 0;
    right: 0;
-   padding: toRem(20) 0;
+   padding-top: toRem(20);
+   padding-bottom: toRem(2);
    z-index: 130;
    background-color: $whiteColor;
    box-shadow: 0 0 4px 2px rgba($textColor, 0.1);
-   margin-bottom: toRem(24);
+   margin-bottom: toRem(32);
 }
-.header__top._scroll { 
+.header-mobile._scroll { 
    display: none;
 }
-.header__top-wrapper {
+.header-mobile__top-wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: toRem(16);
    line-height: toRem(24);
    color: $textSecondColor;
-   margin-bottom: toRem(40);  
+   margin-bottom: toRem(38);  
    gap: toRem(10);
    flex-wrap: wrap;
 }
-.header__contacts {
+.header-mobile__contacts {
    display: flex;
-   gap: toRem(30);
+   gap: toRem(16);
    flex-wrap: wrap;
 }
-.header__phone-wrapper {
-   position: relative;
-   display: flex;
-   align-items: center;
-   & .header__submenu {
-      width: toRem(170);
-      text-wrap: nowrap;
-   }
-   @media (any-hover:hover) {
-      &:hover {
-         &>.header__submenu {
-            opacity: 1;
-            visibility: visible;
-            transform: rotateX(0deg);
-         }
-          & img:last-child {
-               transform: rotateX(180deg);
-         }
-         & .header__phone-link {
-                     filter: $filter;
-         } 
-      }
-   } 
-}
 
-.header__phone-link {
+.header-mobile__phone-link {
    display: flex;
    gap: toRem(4);
    align-items: center; 
-   & img {
-      transition: $mainTransition;
-   }
 }
-.header__phone {
+.header-mobile__phone {
    text-wrap: nowrap;
 }
-.header__email-wrapper {
+
+.header-mobile__email-wrapper {
    display: flex;
    gap: toRem(6);
    align-items: center;
-   @media (any-hover:hover) {
-      &:not(span):hover {
-        filter: $filter
-      }
-    }  
 }
 
-.header__nav-list {
-   display: flex;
-   justify-content: space-between;
-   gap: toRem(30);
-   align-items: center;
-   text-wrap: nowrap;
-   flex-wrap: wrap; 
-   & img {
-      transition: $mainTransition;
-   }
-   & li {
-      @media (any-hover:hover) {
-         &:hover {
-            &>.header__submenu {
-               opacity: 1;
-               visibility: visible;
-               transform: rotateX(0deg);
-            }
-            & img {
-               transform: rotateX(180deg);
-            }
-            & .header__nav-link {
-                     filter: $filter;
-               } 
-            }
-         }
-    } 
-}
-
-.header__nav-item {
-   position: relative;
-
-}
-
-.header__nav-link {
-   display: flex;
-   gap: toRem(5);
-   align-items: center;
-   line-height: 0;
-   line-height: 1;
-}
-
-.header__submenu {
-   position: absolute;
-   top: 100%;
-   left: 0;
-   background-color: $whiteColor;
-   z-index: 150;
-   font-size: toRem(12);
-   line-height: 1;
-   box-shadow: 0 0 4px 0 rgba($color: #000, $alpha: 0.5);
-   transform-origin: 0 0;
-   transform: rotateX(-90deg);
-   transition: $mainTransition;
-   visibility: hidden;
-   opacity: 0;
-   overflow: hidden;
-   & a {
-      padding: toRem(16);
-      display: block;
-      line-height: 1;
-      font-size: toRem(16); 
-      @media (any-hover:hover) {
-         &:hover {
-           background-color: $greyColor50;
-         }
-       }      
-   }
-}
-
-.header__bottom {
+.header-mobile__bottom {
    background-color: $whiteColor;
 }
 
-.header__container {
-   position: relative;
-}
 
-.header__bottom._scroll {
-   position: fixed;
-   padding: toRem(10) 0;
-   top: 0;
-   left: 0;
-   right: 0;
-   box-shadow: 0 0 4px 2px rgba($textColor, 0.1);
-}
-
-.header__bottom-wrapper {
+.header-mobile__bottom-wrapper {
    display: flex;
    justify-content: space-between;
-   gap: toRem(20);
+   gap: toRem(16);
    position: relative;
 }
 
-.header__logo {
+.header-mobile__logo {
    height: toRem(44);
    object-fit: contain;
 }
 
-.header__search-wrapper {
+.header-mobile__search-wrapper {
    display: flex;
    justify-content: space-between;
-   gap: toRem(16);
+   gap: toRem(12);
    width: 100%;
    max-width: toRem(696);
    position: relative;
 }
-.header__catalogue-btn {
+.header-mobile__catalogue-btn {
    @include main-btn;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: toRem(8);
    border-radius: toRem(6);
-   flex-basis: 130px;
-   flex-grow: 1;
+   flex-basis: toRem(52);
+   flex-grow: 0;
    flex-shrink: 0;
-   & img {
-      width: toRem(16);
-      object-fit: contain;
-   }
 }
 
-.header__stripes {
-   width: toRem(13);
-   height: toRem(13);
-   display: inline-flex;
-   flex-direction: column;
-   justify-content: space-between;
-   gap: toRem(1);
-   & span {
-      display: inline-block;
-      background-color: $whiteColor;
-      height: toRem(2);
-      width: 100%;
-      border-radius: toRem(2);
-      
-   }
-}
 
-.header__stripes._active {
-   & span:first-child {
-      transform: translate(0, 270%) rotateZ(-45deg);
-   }
-   & .second {
-      visibility: hidden;
-      opacity: 0;
-   }
-   & span:last-child {
-      transform: translate(0, -270%) rotateZ(45deg);
-   }
-}
-
-.header__search-field {
+.header-mobile__search-field {
    flex-basis: 550px;
    flex-grow: 2;
    position: relative;
 }
 
-.header__search-input {
+.header-mobile__search-input {
    width: 100%;
    height: toRem(44);
    border-radius: toRem(4);
@@ -247,7 +109,7 @@
       border:1px solid $blueColor;
    }
 }
-.header__search-submit {
+.header-mobile__search-submit {
    position: absolute;
    top: toRem(4);
    right: toRem(4);
@@ -257,15 +119,10 @@
    height: toRem(36);
    padding: toRem(8) toRem(10);
    text-align: center;
-   vertical-align: baseline;
-   @media (any-hover:hover) {
-      &:hover {
-        background-color: $blueHoverColor;
-      }
-    }  
+   vertical-align: baseline; 
 }
 
-.header__result {
+.header-mobile__result {
    position: absolute;
    top: 100%;
    left: 0;
@@ -279,7 +136,7 @@
    border: 1px solid $greyColor400;
 }
 
-.header__result-wrapper {
+.header-mobile__result-wrapper {
    display: flex;
    flex-direction: column;
    margin-bottom: toRem(20);
@@ -324,7 +181,7 @@
    } 
 }
 
-.header__result-btn {
+.header-mobile__result-btn {
    @include main-btn;
    margin-left: toRem(16);
    height: toRem(40);
@@ -397,59 +254,6 @@
    }
 }
 
-.header__actions-list {
-   display: flex;
-   gap: toRem(3);
-}
-
-.header__actions-item {
-   min-width: toRem(76);
-   text-align: center;
-   position: relative;
-   & a {
-      display: flex;
-      flex-direction: column;
-      gap: toRem(4);
-      font-size: toRem(14);
-      line-height: toRem(18);
-      color: $textSecondColor;
-   }
-   & >span {
-      display: inline-block;
-      position: absolute;
-      top: 0;
-      right: 50%;
-      transform: translate(100%, -50%);
-      min-width: toRem(20);
-      height: toRem(20);
-      border-radius: 50px;
-      background-color: red;
-      font-size: toRem(12);
-      line-height: toRem(20);
-      font-weight: 700;
-      color: $whiteColor;
-      text-align: center;
-      z-index: 140;
-      padding: 0 toRem(5);
-      overflow: hidden;
-      width: fit-content;
-   }
-}
-
-.header__actions-item {
-   & a {
-      @media (any-hover:hover) {
-         &:not(span):hover {
-            filter: $filter;
-         }
-      }  
-   }
-   & img {
-      height: toRem(20);
-      object-fit: contain;
-   }
-}
-
 .catalogue__layer {
    transform: scale(0);
    opacity: 0;
@@ -459,7 +263,7 @@
    background: $whiteColor;
    top: 110%;
    max-width: 790px;
-   width: 180%;
+   width: 160%;
    left: 0;
    background-color: $whiteColor;
    box-shadow: $boxShadow;
@@ -506,11 +310,11 @@
 .catalogue__content {
    display: inline-flex;
    flex-direction: column;
-   gap: toRem(44);
+   gap: toRem(15);
 }
 
 .catalogue__title {
-   margin-bottom: toRem(16);
+   margin-bottom: toRem(12);
    font-size: toRem(18);
    line-height: 1.3;
 }
@@ -568,10 +372,43 @@
      }  
    } 
 }
+}
 
-
-@media (max-width: $tablet) {
-   .header {
+.mobile__nav-footer {
       display: none;
+      padding: toRem(12) 0;
+      margin: 0 auto;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      z-index: 160;
+      background-color: $whiteColor;
+      box-shadow: $boxShadow;
+      @media (max-width: $tablet) {
+         display: block;
    }
 }
+
+@media (max-width: $tablet) {
+   .mobile__actions-list {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      gap: toRem(12);
+   }
+   
+   .mobile__actions-item {
+      & a {
+         display: flex;
+         flex-direction: column;
+         align-items: center;
+         line-height: toRem(24);
+         justify-content: space-between;
+         height: toRem(48);
+      }
+   }
+
+}   
+
+
