--- a/src/styles/sections/_main.scss
+++ b/src/styles/sections/_main.scss
@@ -1,27 +1,509 @@
 @import '../base/vars';
 @import '../base/base';
 
-.box {
-   width: 60px;
-   height: 60px;
-   margin-left: 30px;
-   background-color: aqua;
-   border-radius: 7px;
-   animation-name: rotate-box;
-   animation-duration: 3s;
-   animation-timing-function: ease-in;
-   animation-iteration-count: infinite;
+.banner {
+   margin-bottom: toRem(60);
+   @media (max-width: $tablet) {
+      margin-bottom: toRem(32);
 }
 
-@keyframes rotate-box {
-   from {
-      transform: 0;
-      scale: 0;
+}
+
+.banner__wrapper {
+   display: flex;
+   justify-content: space-between;
+   gap: toRem(20);
+   font-family: "Inter";
+   line-height: 1;
+}
+.swiper.banner-slider {
+   border-radius: toRem(5);
+   background-color: $blueLightColor;
+   flex: 2 2 toRem(820);
+}
+.swiper-slide.banner-slide {
+   position: relative;
+   & img {
+      display: block;
+      position: absolute;
+      bottom: 9%;
+      right: 7%;
+      max-width: 100%;
+      @media (max-width: $tablet) {
+         max-height: toRem(150);
+         bottom: 12%;
+      }   
    }
-   to {
-      transform: rotateY(180deg) rotateZ(180deg);
-      background-color: rgb(0, 255, 34);
-      scale: 100%;
+}
+.banner-slide__title-container {
+   position: absolute;
+   top: 7%;
+   left: 7%;
+   & h1 {
+   font-size: toRem(32);
+   font-weight: 800;
+   color: $textSecondColor;
+   @media (max-width: $tablet) {
+      margin-bottom: 0;
+      font-size: toRem(28);
+      line-height: toRem(40);
+   } 
+}
+& p {
+   font-size: toRem(24);    
+   line-height: 1;
+   color: rgb(65, 70, 81);
+   @media (max-width: $tablet) {
+      font-size: toRem(20);
+      line-height: toRem(32);
+   } 
+}
+}
+
+.swiper-pagination-fraction, .swiper-pagination-custom, .swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal {
+   top: 90% !important;
+}
+
+.swiper-pagination-bullet {
+   height: toRem(4) !important;
+   width: toRem(16) !important;
+   border-radius: toRem(4) !important;
+}
+
+.swiper-pagination-bullet.swiper-pagination-bullet-active {
+   background-color: $greyColor600 !important;
+}
+
+.banner__market-wrapper {
+   display: flex;
+   flex: 1 1 toRem(400);
+   flex-direction: column;
+   justify-content: space-between;
+   gap: toRem(20);
+}
+.banner__market-item {
+   background-color: $greyColor50;
+   padding: toRem(18) toRem(24) toRem(17) toRem(30);
+   border-radius: toRem(5);
+   @media (max-width: $tablet) {
+      padding: toRem(16) toRem(3);
+      min-height: toRem(70);
+      display: flex;
+      align-items: center;
+   }    
+   
+   & > img {
+      display: none;
+      @media (max-width: $tablet) {
+         margin: 0 auto;
+         display: block;
+    }    
    }
+}
+.banner__item-wrapper {
+   display: flex;
+   justify-content: space-between;
+   gap: toRem(5);   
+   @media (max-width: $tablet) {
+     display: none;
+}
 
 }
+.banner__item-title {
+   margin-bottom: toRem(15);
+   font-weight: 600;
+   
+}
+.benefits {
+   margin-bottom: toRem(80);
+   @media (max-width: $tablet) {
+      margin-bottom: toRem(56);
+}
+}
+h2.benefits__title {
+   margin-bottom: toRem(36);
+   @media (max-width: $tablet) {
+      margin-bottom: toRem(32);
+}
+
+}
+.benefits__wrapper {
+   display: flex;
+   justify-content: space-between;
+   gap: toRem(20);
+   @media (max-width: $tablet) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+}
+
+
+}
+.benefits__title-container {
+   display: flex;
+   gap: toRem(8);
+   margin-bottom: toRem(6);
+   align-items: center;
+   text-wrap: nowrap;
+   filter: $filter;
+   @media (max-width: $tablet) {
+      & h3 {
+         font-size: toRem(20);
+         line-height: toRem(30);
+         margin-bottom: toRem(8);
+      }
+}
+
+}
+.popular {
+   margin-bottom: toRem(80);
+   @media (max-width: $tablet) {
+      margin-bottom: toRem(56);
+}
+
+}
+
+.popular__title {
+   margin-bottom: toRem(36);
+   @media (max-width: $tablet) {
+      margin-bottom: toRem(32);
+}
+}
+.popular__grid {
+   display: grid;
+   grid-template-columns: repeat(4, minmax(215px, 295px));
+   gap: toRem(20);
+   & a {
+      display: block;
+      border: 1px solid $greyColor400;
+      border-radius: toRem(4);
+   }
+   & h5 {
+      margin-bottom: toRem(5);
+   }
+   & p {
+      line-height: toRem(24);
+      color: $redColor;
+   }
+   @media (max-width: $tablet) {
+      grid-template-columns: repeat(3, minmax(170px, 300px));
+      
+   }
+   @media (max-width: $sTablet) {
+      grid-template-columns: repeat(3, minmax(150px, 225px));
+   }
+}
+
+.hide-subsequent-rows {
+   @media (max-width: $tablet) {
+      grid-template-rows: 1fr;
+      grid-auto-rows: 0;
+      padding-bottom: 0;
+      row-gap: 0;
+      overflow: hidden;    
+   }   
+}
+
+.popular__item-wrapper {
+   text-align: center;
+   padding: toRem(20);
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   height: 100%;
+   & div:first-child {
+      margin-bottom: toRem(12);
+      object-fit: contain;
+      & img {
+         max-width: 100%;
+      }
+   }
+   @media (max-width: $sTablet) {
+      padding-inline: toRem(12);
+   }
+}
+.about {
+   margin-bottom: toRem(80);
+   @media (max-width: $tablet) {
+      margin-bottom: toRem(56);
+}
+
+}
+
+.about__title {
+   margin-bottom: toRem(36);
+   @media (max-width: $tablet) {
+      margin-bottom: toRem(32);
+}
+
+}
+.about__wrapper {
+   display: flex;
+   justify-content: space-between;
+   gap: toRem(40);
+   @media (max-width: $tablet) {
+      gap: toRem(20);
+   }
+}
+.about__img-container {
+   overflow: hidden;
+   flex-grow: 1;
+   flex-shrink: 2;
+   & img {
+      display: block;
+      max-width: 100%;
+      height: 100%;
+      border-radius: toRem(4);
+      @media (max-width: $tablet) {
+         flex-grow: 1;
+         flex-shrink: 2;
+         flex-basis: 25%;
+      }
+   }
+}
+.about__content {
+   flex-basis: toRem(660);
+   flex-grow: 2;
+   display: flex;
+   flex-direction: column;
+   gap: toRem(14);
+   justify-content: space-between;
+   @media (max-width: $tablet) {
+      flex-basis: 75%;
+      flex-grow: 3;
+      flex-shrink: 1;
+   }
+   & a {
+      @include main-btn;
+      max-width: toRem(150);
+      text-align: center;
+      @media (max-width: $tablet) {
+       height: toRem(44);
+       display: flex;
+       align-items: center;
+       justify-content: center;
+      }
+   }
+   & h4 {
+      line-height: toRem(32);
+   }
+}
+
+.about__text {
+   & p:first-child {
+      @media (max-width: $tablet) {
+         margin-bottom: toRem(16);
+      }
+   }
+}
+
+.news {
+   margin-bottom: toRem(80);
+   @media (max-width: $tablet) {
+      margin-bottom: toRem(56);
+}
+
+}
+
+.news__body, .articles__body, .documents__body, .brands__body {
+   position: relative;
+}
+
+.swiper {
+   overflow: unset !important;
+   overflow-x: hidden !important;
+}
+
+.swiper.news-slider, .swiper.articles-slider, .swiper.documents-slider, .swiper.brands-slider {
+   padding-right: toRem(12);
+}
+
+.swiper-button-prev.news, .swiper-button-next.news, .swiper-button-prev.articles, .swiper-button-next.articles, .swiper-button-prev.documents, .swiper-button-next.documents, .swiper-button-prev.brands, .swiper-button-next.brands, .swiper-button-prev.brands, .swiper-button-next.brands {
+   width: toRem(46) !important;
+   height: toRem(46) !important;
+   background-color: $whiteColor !important;
+   box-shadow: 0 1px 4px 0 rgba(83, 88, 98, 0.3);
+   border-radius: 50%;
+   position: absolute;
+   top: toRem(50%);
+   transform: translateY(-3px);
+   &::after {
+      font-size: toRem(14) !important;
+      font-weight: 700 !important;
+   }
+}
+.swiper-button-prev.news, .swiper-button-prev.articles, .swiper-button-prev.documents, .swiper-button-prev.brands{ 
+   left: -21px;
+}
+
+.swiper-button-next.news, .swiper-button-next.articles, .swiper-button-next.documents, .swiper-button-next.brands { 
+   right: -21px;
+   @media (max-width: $tablet) {
+      right: -17px;
+}
+}
+
+.news__title-container {
+   margin-bottom: toRem(36);
+   display: flex;
+   flex-direction: row;
+   gap: toRem(16);
+   align-items: center;
+   @media (max-width: $tablet) {
+      margin-bottom: toRem(32);
+}
+
+}
+
+.title-btn {
+   @include stroke-btn;
+   height: toRem(36);
+   @media (max-width: $tablet) {
+      height: toRem(44);
+   }
+}
+
+.swiper-slide {
+   height: unset !important;
+}
+
+.news__item, .articles__item, .documents__item{
+   border: 1px solid $greyColor400;
+   border-radius: toRem(4);   
+   padding: toRem(24) 0;
+   overflow: hidden;
+   & >div:first-child {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding: 0 toRem(24);
+      height: 100%;
+      @media (max-width: $tablet) {
+         padding: 0 toRem(16);
+      }
+   }
+   & a {
+      @include main-btn;
+      width: toRem(130);
+      text-align: center;
+      margin: 0 auto;
+      @media (max-width: $tablet) {
+         width: toRem(143);
+         height: toRem(28);
+         display: flex;
+         align-items: center;
+         justify-content: center;
+      }
+   }
+   & button {
+      @include main-btn;
+      width: toRem(130);
+      text-align: center;
+      margin: 0 auto;
+      @media (max-width: $tablet) {
+         height: toRem(28);
+         width: toRem(143);
+         display: flex;
+         align-items: center;
+         justify-content: center;
+      }
+   }
+   & div > div {
+      object-fit: contain;
+      max-height: toRem(180);
+      & img {
+         max-width: 100%;
+      }
+   }
+   & div:last-child {
+      display: flex;
+      flex-direction: column;
+   }
+   & h5 {
+      margin-bottom: toRem(8);
+      line-height: toRem(20);
+   }
+   & p {
+      margin-bottom: toRem(8);
+      line-height: toRem(20);
+   }
+}
+
+.articles {
+   margin-bottom: toRem(80);
+   @media (max-width: $tablet) {
+      margin-bottom: toRem(56);
+}
+
+}
+.articles__title-container {
+   margin-bottom: toRem(36);
+   display: flex;
+   flex-direction: row;
+   gap: toRem(16);
+   align-items: center;
+   @media (max-width: $tablet) {
+      margin-bottom: toRem(32);
+}
+
+}
+
+.documents {
+   margin-bottom: toRem(80);
+   @media (max-width: $tablet) {
+      margin-bottom: toRem(56);
+}
+
+
+}
+
+.documents__title-container {
+   margin-bottom: toRem(36);
+   display: flex;
+   flex-direction: row;
+   gap: toRem(16);
+   align-items: center;
+   @media (max-width: $tablet) {
+      margin-bottom: toRem(32);
+}
+
+
+}
+
+.brands {
+   margin-bottom: toRem(80);
+   @media (max-width: $tablet) {
+      margin-bottom: toRem(56);
+}
+
+}
+
+.brands__body {
+   padding: 0 toRem(28);
+}
+.brands__title-container {
+   margin-bottom: toRem(36);
+   display: flex;
+   flex-direction: row;
+   gap: toRem(16);
+   align-items: center;
+   @media (max-width: $tablet) {
+      margin-bottom: toRem(32);
+}
+
+}
+.swiper-slide.brand {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+.brands__slider-item {
+   & a {
+      line-height: 0;
+      display: inline-block;
+   }
+   & img {
+      max-width: 100%;
+      object-fit: contain;
+   }
+}
+
