--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -23,6 +23,9 @@
       max-width: 752px;
       padding: 0 20px;
    }
+   @media (max-width: $sMobile) {
+      padding: 0 16px;
+   }
 }
 
 h2 {
@@ -31,8 +34,12 @@ h2 {
    line-height: toRem(44);
    color: $blackColor;
    @media (max-width: $tablet) {
-      font-size: 28px;
+      font-size: toRem(28);
       line-height: toRem(36);
+   }
+   @media (max-width: $mobile) {
+      font-size: toRem(24);
+      line-height: toRem(32);
    }
 }
 
@@ -59,4 +66,8 @@ h5 {
 
 a {
    transition: $mainTransition;
+}
+
+select {
+   appearance: none;
 }
