--- a/src/styles/layouts/_header.scss
+++ b/src/styles/layouts/_header.scss
@@ -59,6 +59,9 @@
    display: flex;
    gap: toRem(4);
    align-items: center; 
+   & img:first-of-type {
+      width: toRem(16);
+   }
    & img {
       transition: $mainTransition;
    }
@@ -74,7 +77,10 @@
       &:not(span):hover {
         filter: $filter
       }
-    }  
+   }
+   & > img {
+      width: toRem(16);
+   }  
 }
 
 .header__nav-list {
@@ -162,6 +168,7 @@
    left: 0;
    right: 0;
    box-shadow: 0 0 4px 2px rgba($textColor, 0.1);
+   z-index: 160;
 }
 
 .header__bottom-wrapper {
