--- a/src/styles/sections/_main.scss
+++ b/src/styles/sections/_main.scss
@@ -1,323 +1,631 @@
 @import '../base/vars';
 @import '../base/base';
+@import './product-select';
 
-.banner {
+.banner
+{
    margin-bottom: toRem(60);
-   @media (max-width: $tablet) {
+
+   @media (max-width: $tablet)
+   {
       margin-bottom: toRem(32);
-}
+   }
+
+   @media (max-width: $mobile)
+   {
+      margin-bottom: toRem(40);
+   }
 
 }
 
-.banner__wrapper {
+.banner__wrapper
+{
    display: flex;
    justify-content: space-between;
    gap: toRem(20);
    font-family: "Inter";
    line-height: 1;
+
+   @media (max-width: $mobile)
+   {
+      flex-direction: column;
+      gap: toRem(16);
+   }
 }
-.swiper.banner-slider {
+
+.swiper.banner-slider
+{
    border-radius: toRem(5);
    background-color: $blueLightColor;
    flex: 2 2 toRem(820);
+
+   @media (max-width: $mobile)
+   {
+      flex-basis: toRem(328);
+      max-width: 100%;
+   }
 }
-.swiper-slide.banner-slide {
+
+.swiper-slide.banner-slide
+{
    position: relative;
-   & img {
+
+   & img
+   {
       display: block;
       position: absolute;
       bottom: 9%;
       right: 7%;
       max-width: 100%;
-      @media (max-width: $tablet) {
+
+      @media (max-width: $tablet)
+      {
          max-height: toRem(150);
          bottom: 12%;
-      }   
+      }
    }
 }
-.banner-slide__title-container {
+
+.banner-slide__title-container
+{
    position: absolute;
    top: 7%;
    left: 7%;
-   & h1 {
-   font-size: toRem(32);
-   font-weight: 800;
-   color: $textSecondColor;
-   @media (max-width: $tablet) {
-      margin-bottom: 0;
-      font-size: toRem(28);
-      line-height: toRem(40);
-   } 
-}
-& p {
-   font-size: toRem(24);    
-   line-height: 1;
-   color: rgb(65, 70, 81);
-   @media (max-width: $tablet) {
-      font-size: toRem(20);
-      line-height: toRem(32);
-   } 
-}
+   z-index: 120;
+
+   & h1
+   {
+      font-size: toRem(32);
+      font-weight: 800;
+      color: $textSecondColor;
+      margin-bottom: toRem(24);
+
+      @media (max-width: $tablet)
+      {
+         margin-bottom: 0;
+         font-size: toRem(28);
+         line-height: toRem(40);
+         font-weight: 700;
+      }
+
+      @media (max-width: $mobile)
+      {
+         font-size: toRem(20);
+         line-height: toRem(30);
+      }
+   }
+
+   & p
+   {
+      font-size: toRem(24);
+      line-height: 1;
+      color: rgb(65, 70, 81);
+
+      @media (max-width: $tablet)
+      {
+         font-size: toRem(20);
+         line-height: toRem(32);
+         font-weight: 700;
+      }
+
+      @media (max-width: $mobile)
+      {
+         font-size: toRem(13);
+         line-height: toRem(24);
+         font-weight: 500;
+      }
+   }
 }
 
-.swiper-pagination-fraction, .swiper-pagination-custom, .swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal {
+.swiper-pagination-fraction,
+.swiper-pagination-custom,
+.swiper-horizontal>.swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal
+{
    top: 90% !important;
 }
 
-.swiper-pagination-bullet {
+.swiper-pagination-bullet
+{
    height: toRem(4) !important;
    width: toRem(16) !important;
    border-radius: toRem(4) !important;
 }
 
-.swiper-pagination-bullet.swiper-pagination-bullet-active {
+.swiper-pagination-bullet.swiper-pagination-bullet-active
+{
    background-color: $greyColor600 !important;
 }
 
-.banner__market-wrapper {
+.banner__market-wrapper
+{
    display: flex;
    flex: 1 1 toRem(400);
    flex-direction: column;
    justify-content: space-between;
    gap: toRem(20);
+
+   @media (max-width: $sTablet)
+   {
+      flex: 1 1 toRem(250);
+   }
+
+   @media (max-width: $mobile)
+   {
+      flex-direction: row;
+      flex-basis: toRem(44);
+      gap: toRem(8);
+   }
 }
-.banner__market-item {
+
+.banner__market-item
+{
    background-color: $greyColor50;
    padding: toRem(18) toRem(24) toRem(17) toRem(30);
    border-radius: toRem(5);
-   @media (max-width: $tablet) {
+
+   @media (max-width: $tablet)
+   {
       padding: toRem(16) toRem(3);
       min-height: toRem(70);
       display: flex;
       align-items: center;
-   }    
-   
-   & > img {
+   }
+
+   @media (max-width: $mobile)
+   {
+      min-height: toRem(44);
+      padding: 0 toRem(10);
+      flex: 1 2 33%;
+   }
+
+
+   &>div>img
+   {
+      max-height: toRem(85);
+
+   }
+
+   &>img
+   {
       display: none;
-      @media (max-width: $tablet) {
+
+      @media (max-width: $tablet)
+      {
          margin: 0 auto;
          display: block;
-    }    
+      }
+
+      @media (max-width: $mobile)
+      {
+         object-fit: contain;
+         max-width: 100%;
+         max-height: toRem(22);
+      }
    }
 }
-.banner__item-wrapper {
+
+.banner__item-wrapper
+{
    display: flex;
    justify-content: space-between;
-   gap: toRem(5);   
-   @media (max-width: $tablet) {
-     display: none;
-}
+   gap: toRem(5);
+
+   @media (max-width: $tablet)
+   {
+      display: none;
+   }
 
 }
-.banner__item-title {
+
+.banner__item-title
+{
    margin-bottom: toRem(15);
    font-weight: 600;
-   
-}
-.benefits {
-   margin-bottom: toRem(80);
-   @media (max-width: $tablet) {
-      margin-bottom: toRem(56);
-}
-}
-h2.benefits__title {
-   margin-bottom: toRem(36);
-   @media (max-width: $tablet) {
-      margin-bottom: toRem(32);
-}
 
 }
-.benefits__wrapper {
+
+.benefits
+{
+   margin-bottom: toRem(80);
+
+   @media (max-width: $tablet)
+   {
+      margin-bottom: toRem(56);
+   }
+
+   @media (max-width: $mobile)
+   {
+      margin-bottom: toRem(40);
+   }
+}
+
+h2.benefits__title
+{
+   margin-bottom: toRem(36);
+
+   @media (max-width: $tablet)
+   {
+      margin-bottom: toRem(32);
+   }
+
+   @media (max-width: $mobile)
+   {
+      margin-bottom: toRem(20);
+   }
+
+}
+
+.benefits__wrapper
+{
    display: flex;
    justify-content: space-between;
    gap: toRem(20);
-   @media (max-width: $tablet) {
+
+   @media (max-width: $tablet)
+   {
       display: grid;
       grid-template-columns: 1fr 1fr;
-}
+   }
+
+   @media (max-width: $mobile)
+   {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: toRem(24);
+   }
 
 
 }
-.benefits__title-container {
+
+.benefits__title-container
+{
    display: flex;
    gap: toRem(8);
    margin-bottom: toRem(6);
    align-items: center;
    text-wrap: nowrap;
    filter: $filter;
-   @media (max-width: $tablet) {
-      & h3 {
+
+   @media (max-width: $mobile)
+   {
+      margin-bottom: toRem(12);
+   }
+
+   &>img
+   {
+      max-width: toRem(24);
+      max-height: toRem(24);
+   }
+
+   @media (max-width: $tablet)
+   {
+      & h3
+      {
          font-size: toRem(20);
          line-height: toRem(30);
          margin-bottom: toRem(8);
+
+         @media (max-width: $mobile)
+         {
+            line-height: toRem(26);
+            margin-bottom: 0;
+         }
       }
-}
+   }
 
 }
-.popular {
+
+.popular
+{
    margin-bottom: toRem(80);
-   @media (max-width: $tablet) {
+
+   @media (max-width: $tablet)
+   {
       margin-bottom: toRem(56);
+   }
+
+   @media (max-width: $mobile)
+   {
+      margin-bottom: toRem(40);
+   }
 }
 
-}
-
-.popular__title {
+.popular__title
+{
    margin-bottom: toRem(36);
-   @media (max-width: $tablet) {
+
+   @media (max-width: $tablet)
+   {
       margin-bottom: toRem(32);
+   }
+
+   @media (max-width: $mobile)
+   {
+      margin-bottom: toRem(20);
+   }
 }
-}
-.popular__grid {
+
+.popular__grid
+{
    display: grid;
    grid-template-columns: repeat(4, minmax(215px, 295px));
    gap: toRem(20);
-   & a {
+
+   & a
+   {
       display: block;
       border: 1px solid $greyColor400;
       border-radius: toRem(4);
    }
-   & h5 {
+
+   & h5
+   {
       margin-bottom: toRem(5);
    }
-   & p {
+
+   & p
+   {
       line-height: toRem(24);
       color: $redColor;
    }
-   @media (max-width: $tablet) {
+
+   @media (max-width: $tablet)
+   {
       grid-template-columns: repeat(3, minmax(170px, 300px));
-      
+
+      & a:nth-child(3n):nth-last-child(-n+4)~a
+      {
+         display: none;
+      }
+
    }
-   @media (max-width: $sTablet) {
+
+   @media (max-width: $sTablet)
+   {
       grid-template-columns: repeat(3, minmax(150px, 225px));
    }
+
+   @media (max-width: $mobile)
+   {
+      grid-template-columns: repeat(2, minmax(150px, 248px));
+      justify-content: center;
+      gap: toRem(12) toRem(8);
+   }
 }
 
-.hide-subsequent-rows {
-   @media (max-width: $tablet) {
-      grid-template-rows: 1fr;
-      grid-auto-rows: 0;
-      padding-bottom: 0;
-      row-gap: 0;
-      overflow: hidden;    
-   }   
-}
-
-.popular__item-wrapper {
+.popular__item-wrapper
+{
    text-align: center;
    padding: toRem(20);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
-   & div:first-child {
+
+   & div:first-child
+   {
       margin-bottom: toRem(12);
       object-fit: contain;
-      & img {
+
+      & img
+      {
          max-width: 100%;
       }
    }
-   @media (max-width: $sTablet) {
+
+   @media (max-width: $sTablet)
+   {
       padding-inline: toRem(12);
    }
 }
-.about {
+
+.about
+{
    margin-bottom: toRem(80);
-   @media (max-width: $tablet) {
+
+   @media (max-width: $tablet)
+   {
       margin-bottom: toRem(56);
-}
+   }
+
+   @media (max-width: $mobile)
+   {
+      margin-bottom: toRem(40);
+   }
 
 }
 
-.about__title {
+.about__title
+{
    margin-bottom: toRem(36);
-   @media (max-width: $tablet) {
+
+   @media (max-width: $tablet)
+   {
       margin-bottom: toRem(32);
-}
+   }
+
+   @media (max-width: $mobile)
+   {
+      margin-bottom: toRem(20);
+   }
 
 }
-.about__wrapper {
+
+.about__wrapper
+{
    display: flex;
    justify-content: space-between;
    gap: toRem(40);
-   @media (max-width: $tablet) {
+
+   @media (max-width: $tablet)
+   {
       gap: toRem(20);
    }
+
+   @media (max-width: $mobile)
+   {
+      flex-direction: column;
+      gap: toRem(16);
+   }
 }
-.about__img-container {
+
+.about__img-container
+{
    overflow: hidden;
    flex-grow: 1;
    flex-shrink: 2;
-   & img {
+
+   @media (max-width: $mobile)
+   {
+      height: toRem(156);
+
+   }
+
+   & img
+   {
       display: block;
-      max-width: 100%;
-      height: 100%;
       border-radius: toRem(4);
-      @media (max-width: $tablet) {
+      height: toRem(224);
+      width: 100%;
+      object-fit: fill;
+
+      @media (max-width: $tablet)
+      {
+         height: 100%;
          flex-grow: 1;
          flex-shrink: 2;
          flex-basis: 25%;
       }
    }
 }
-.about__content {
+
+.about__content
+{
    flex-basis: toRem(660);
    flex-grow: 2;
    display: flex;
    flex-direction: column;
    gap: toRem(14);
    justify-content: space-between;
-   @media (max-width: $tablet) {
+
+   @media (max-width: $tablet)
+   {
       flex-basis: 75%;
       flex-grow: 3;
       flex-shrink: 1;
    }
-   & a {
+
+   @media (max-width: $mobile)
+   {
+      gap: toRem(16)
+   }
+
+   & a
+   {
       @include main-btn;
       max-width: toRem(150);
       text-align: center;
-      @media (max-width: $tablet) {
-       height: toRem(44);
-       display: flex;
-       align-items: center;
-       justify-content: center;
+
+      @media (max-width: $tablet)
+      {
+         max-width: toRem(190);
+         height: toRem(44);
+         display: flex;
+         align-items: center;
+         justify-content: center;
+      }
+
+      @media (max-width: $mobile)
+      {
+         max-width: toRem(160);
       }
    }
-   & h4 {
+
+   & h4
+   {
       line-height: toRem(32);
+
+      @media (max-width: $mobile)
+      {
+         font-size: toRem(16);
+         line-height: toRem(24);
+      }
    }
 }
 
-.about__text {
-   & p:first-child {
-      @media (max-width: $tablet) {
+.about__text
+{
+   & p:first-child
+   {
+      @media (max-width: $tablet)
+      {
          margin-bottom: toRem(16);
       }
    }
+
+   & p:last-child
+   {
+      @media (max-width: $mobile)
+      {
+         margin-bottom: toRem(4);
+      }
+   }
 }
 
-.news {
+.news
+{
    margin-bottom: toRem(80);
-   @media (max-width: $tablet) {
+
+   @media (max-width: $tablet)
+   {
       margin-bottom: toRem(56);
+   }
+
+   @media (max-width: $mobile)
+   {
+      margin-bottom: toRem(40);
+   }
 }
 
-}
-
-.news__body, .articles__body, .documents__body, .brands__body {
+.news__body,
+.articles__body,
+.documents__body,
+.brands__body
+{
    position: relative;
 }
 
-.swiper {
+.swiper
+{
    overflow: unset !important;
    overflow-x: hidden !important;
+
+   @media (max-width: $mobile)
+   {
+      width: 130%;
+   }
 }
 
-.swiper.news-slider, .swiper.articles-slider, .swiper.documents-slider, .swiper.brands-slider {
+.swiper.news-slider,
+.swiper.articles-slider,
+.swiper.documents-slider,
+.swiper.brands-slider
+{
    padding-right: toRem(12);
 }
 
-.swiper-button-prev.news, .swiper-button-next.news, .swiper-button-prev.articles, .swiper-button-next.articles, .swiper-button-prev.documents, .swiper-button-next.documents, .swiper-button-prev.brands, .swiper-button-next.brands, .swiper-button-prev.brands, .swiper-button-next.brands {
+.swiper-button-prev.news,
+.swiper-button-next.news,
+.swiper-button-prev.articles,
+.swiper-button-next.articles,
+.swiper-button-prev.documents,
+.swiper-button-next.documents,
+.swiper-button-prev.brands,
+.swiper-button-next.brands,
+.swiper-button-prev.brands,
+.swiper-button-next.brands
+{
    width: toRem(46) !important;
    height: toRem(46) !important;
    background-color: $whiteColor !important;
@@ -326,184 +634,292 @@ h2.benefits__title {
    position: absolute;
    top: toRem(50%);
    transform: translateY(-3px);
-   &::after {
+
+   &::after
+   {
       font-size: toRem(14) !important;
       font-weight: 700 !important;
    }
+
+   @media (max-width: $mobile)
+   {
+      display: none;
+   }
 }
-.swiper-button-prev.news, .swiper-button-prev.articles, .swiper-button-prev.documents, .swiper-button-prev.brands{ 
+
+.swiper-button-prev.news,
+.swiper-button-prev.articles,
+.swiper-button-prev.documents,
+.swiper-button-prev.brands
+{
    left: -21px;
 }
 
-.swiper-button-next.news, .swiper-button-next.articles, .swiper-button-next.documents, .swiper-button-next.brands { 
+.swiper-button-next.news,
+.swiper-button-next.articles,
+.swiper-button-next.documents,
+.swiper-button-next.brands
+{
    right: -21px;
-   @media (max-width: $tablet) {
+
+   @media (max-width: $tablet)
+   {
       right: -17px;
-}
+   }
 }
 
-.news__title-container {
+.news__title-container
+{
    margin-bottom: toRem(36);
    display: flex;
    flex-direction: row;
    gap: toRem(16);
    align-items: center;
-   @media (max-width: $tablet) {
+
+   @media (max-width: $tablet)
+   {
       margin-bottom: toRem(32);
-}
+   }
+
+   @media (max-width: $mobile)
+   {
+      margin-bottom: toRem(20);
+   }
+
 
 }
 
-.title-btn {
+.title-btn
+{
    @include stroke-btn;
    height: toRem(36);
-   @media (max-width: $tablet) {
+
+   @media (max-width: $tablet)
+   {
       height: toRem(44);
+   }
+
+   @media (max-width: $mobile)
+   {
+      height: toRem(36);
    }
 }
 
-.swiper-slide {
+.swiper-slide
+{
    height: unset !important;
 }
 
-.news__item, .articles__item, .documents__item{
+.news__item,
+.articles__item,
+.documents__item
+{  display: block;
    border: 1px solid $greyColor400;
-   border-radius: toRem(4);   
+   border-radius: toRem(4);
    padding: toRem(24) 0;
    overflow: hidden;
-   & >div:first-child {
+   &>div:first-child
+   {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       padding: 0 toRem(24);
       height: 100%;
-      @media (max-width: $tablet) {
+
+      @media (max-width: $tablet)
+      {
          padding: 0 toRem(16);
       }
+      @media (max-width: $mobile) {
+         padding: 0 toRem(12);         
+      }
    }
-   & a {
+   @media (max-width: $tablet)
+   {
+      padding: toRem(16) 0;
+   }
+   @media (max-width: $mobile) {
+      padding: toRem(12) 0;
+   }
+
+   & a
+   {
       @include main-btn;
       width: toRem(130);
       text-align: center;
       margin: 0 auto;
-      @media (max-width: $tablet) {
+
+      @media (max-width: $tablet)
+      {
          width: toRem(143);
          height: toRem(28);
          display: flex;
          align-items: center;
          justify-content: center;
       }
-   }
-   & button {
-      @include main-btn;
-      width: toRem(130);
-      text-align: center;
-      margin: 0 auto;
-      @media (max-width: $tablet) {
-         height: toRem(28);
-         width: toRem(143);
-         display: flex;
-         align-items: center;
-         justify-content: center;
+      @media (max-width: $mobile) {
+         transition: none;
+         height: 100%;
+         width: 100%;
+         position: absolute;
+         opacity: 0;
       }
    }
-   & div > div {
-      object-fit: contain;
+
+   & div>div
+   {
       max-height: toRem(180);
-      & img {
-         max-width: 100%;
+      overflow: hidden;
+      & img
+      {
+         width: 100%;
+         object-fit: contain;
+         @media (max-width: $mobile) {
+            max-height: toRem(132);
+            object-fit: fill;
+         }
       }
    }
-   & div:last-child {
+
+   & div:last-child
+   {
       display: flex;
       flex-direction: column;
    }
-   & h5 {
+
+   & h5
+   {
       margin-bottom: toRem(8);
-      line-height: toRem(20);
    }
-   & p {
+
+   & p
+   {
       margin-bottom: toRem(8);
-      line-height: toRem(20);
    }
 }
 
-.articles {
+.articles
+{
    margin-bottom: toRem(80);
-   @media (max-width: $tablet) {
+
+   @media (max-width: $tablet)
+   {
       margin-bottom: toRem(56);
+   }
+
+   @media (max-width: $mobile)
+   {
+      margin-bottom: toRem(40);
+   }
 }
 
-}
-.articles__title-container {
+.articles__title-container
+{
    margin-bottom: toRem(36);
    display: flex;
    flex-direction: row;
    gap: toRem(16);
    align-items: center;
-   @media (max-width: $tablet) {
+
+   @media (max-width: $tablet)
+   {
       margin-bottom: toRem(32);
+   }
+
+   @media (max-width: $mobile)
+   {
+      margin-bottom: toRem(20);
+   }
 }
 
-}
-
-.documents {
+.documents
+{
    margin-bottom: toRem(80);
-   @media (max-width: $tablet) {
+
+   @media (max-width: $tablet)
+   {
       margin-bottom: toRem(56);
+   }
+
+   @media (max-width: $mobile)
+   {
+      margin-bottom: toRem(40);
+   }
 }
 
-
-}
-
-.documents__title-container {
+.documents__title-container
+{
    margin-bottom: toRem(36);
    display: flex;
    flex-direction: row;
    gap: toRem(16);
    align-items: center;
-   @media (max-width: $tablet) {
+
+   @media (max-width: $tablet)
+   {
       margin-bottom: toRem(32);
+   }
+
+   @media (max-width: $mobile)
+   {
+      margin-bottom: toRem(20);
+   }
+
 }
 
-
-}
-
-.brands {
+.brands
+{
    margin-bottom: toRem(80);
-   @media (max-width: $tablet) {
+
+   @media (max-width: $tablet)
+   {
       margin-bottom: toRem(56);
+   }
+
+   @media (max-width: $mobile)
+   {
+      margin-bottom: toRem(40);
+   }
 }
 
-}
-
-.brands__body {
+.brands__body
+{
    padding: 0 toRem(28);
 }
-.brands__title-container {
+
+.brands__title-container
+{
    margin-bottom: toRem(36);
    display: flex;
    flex-direction: row;
    gap: toRem(16);
    align-items: center;
-   @media (max-width: $tablet) {
+
+   @media (max-width: $tablet)
+   {
       margin-bottom: toRem(32);
-}
+   }
 
 }
-.swiper-slide.brand {
+
+.swiper-slide.brand
+{
    display: flex;
    justify-content: center;
    align-items: center;
 }
-.brands__slider-item {
-   & a {
+
+.brands__slider-item
+{
+   & a
+   {
       line-height: 0;
       display: inline-block;
    }
-   & img {
+
+   & img
+   {
       max-width: 100%;
       object-fit: contain;
    }
 }
-
